setup server for jwt token

--- a/package.json
+++ b/package.json
@@ -35,10 +35,13 @@
     "@fortawesome/angular-fontawesome": "^4.0.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@ngrx/signals": "^20.1.0",
-    "express": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "crypto-js": "^4.2.0",
+    "express": "^5.2.1",
+    "express-session": "^1.18.2",
     "flowbite": "^4.0.1",
     "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.3",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.3",
     "tslib": "^2.3.0"
@@ -48,7 +51,12 @@
     "@angular/cli": "^21.0.1",
     "@angular/compiler-cli": "^21.0.0",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/crypto-js": "^4.2.2",
     "@types/express": "^5.0.1",
+    "@types/express-session": "^1.18.2",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.3",
