--- a/angular.json
+++ b/angular.json
@@ -18,6 +18,9 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
+            "security": {
+              "autoCsp": true
+            },
             "tsConfig": "tsconfig.app.json",
             "assets": [
               {
@@ -25,9 +28,7 @@
                 "input": "public"
               }
             ],
-            "styles": [
-              "src/styles.css"
-            ],
+            "styles": ["src/styles.css"],
             "server": "src/main.server.ts",
             "outputMode": "server",
             "ssr": {
