--- a/package.json
+++ b/package.json
@@ -33,14 +33,17 @@
     "@angular/router": "^21.0.0",
     "@angular/ssr": "^21.0.1",
     "@fortawesome/angular-fontawesome": "^4.0.0",
+    "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
     "flowbite": "^4.0.1",
     "helmet": "^8.1.0",
+    "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.3",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.3",
