--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr": "node dist/medi-ray/server/server.mjs"
+    "dev:ssr": "NODE_ENV=development ng serve",
+    "build:ssr": "ng build && NODE_ENV=production ng build --configuration production",
+    "serve:ssr": "node dist/medi-ray/server/server.mjs",
+    "start": "NODE_ENV=production node dist/medi-ray/server/server.mjs"
   },
   "prettier": {
     "printWidth": 100,
@@ -45,6 +47,7 @@
     "helmet": "^8.1.0",
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.3",
+    "nodemailer": "^7.0.12",
     "rxjs": "~7.8.0",
     "swiper": "^12.0.3",
     "tslib": "^2.3.0"
@@ -61,6 +64,8 @@
     "@types/express-session": "^1.18.2",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^20.17.19",
+    "@types/nodemailer": "^7.0.4",
+    "cross-env": "^10.1.0",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.12",
