--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
     "@fortawesome/free-brands-svg-icons": "^7.1.0",
     "@fortawesome/free-regular-svg-icons": "^7.1.0",
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
+    "axios": "^1.13.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "crypto-js": "^4.2.0",
     "express": "^5.2.1",
     "express-session": "^1.18.2",
     "flowbite": "^4.0.1",
+    "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
     "jimp": "^1.6.0",
     "jsonwebtoken": "^9.0.3",
@@ -67,6 +69,7 @@
     "@types/nodemailer": "^7.0.4",
     "cross-env": "^10.1.0",
     "jsdom": "^27.1.0",
+    "ngx-sitemap": "^1.0.0",
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.12",
     "typescript": "~5.9.2",
